--- a/www/index.html
+++ b/www/index.html
@@ -18,6 +18,7 @@
 
     <!-- your app's js -->
     <script src="js/app.js"></script>
+    <script src="js/services.js"></script>
     <script src="templates/splash/splash.js"></script>
     <script src="templates/login/login.js"></script>
     <script src="templates/registration/registration.js"></script>
